docs(config): add recommended security settings for public-facing nodes
- node.http.maxRequestBodySize: 5MB default
- node.jsonrpc: maxBatchSize, maxResponseSize, maxRequestTimeout,
  maxAddressSize with geth-aligned defaults
- rate.limiter.http: recommended QPS for TriggerConstantContractServlet
  and EstimateEnergyServlet
- global.qps / global.ip.qps: recommended values in comments
- vm.maxEnergyLimitForConstant / maxConcurrentConstantCalls: recommended
  values in comments